@@ -1,9 +1,5 @@
 <?php
 
-
-require_once( WP_PLUGIN_DIR . '/testimonials-widget/lib/settings.testimonials-widget.php' );
-
-
 class Testimonials_Widget_Widget extends WP_Widget {
 	public function Testimonials_Widget_Widget() {
 		// Widget settings
@@ -83,17 +79,14 @@ class Testimonials_Widget_Widget extends WP_Widget {
 					$new_title	.= $title;
 					$new_title	.= '"';
 
-					if ( ! empty( $instance['target'] ) ) {
-						$new_title	.= ' target="';
-						$new_title	.= $instance['target'];
-						$new_title	.= '" ';
-					}
-
 					$new_title	.= '>';
 					$new_title	.= $title;
 					$new_title	.= '</a>';
 
 					$title		= $new_title;
+
+					if ( ! empty( $instance['target'] ) )
+						$title	= links_add_target( $title, $instance['target'] );
 				}
 			}
 			
